Fix animation problems on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,8 @@ h1, h2, h3, h4, h5, h6,
 html, body { height: 100%; }
 body {
   position: relative;
+  background-color: #000;
+  z-index: 0;
 }
 
 
@@ -76,7 +78,6 @@ body {
   width: 100%;
   top: 60px;
   bottom: 0;
-  -webkit-overflow-scrolling: touch;
   background-color: #000;
 }
 
@@ -87,6 +88,7 @@ body {
   width: 100%;
   height: 100%;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .md-view-inner {
@@ -116,10 +118,17 @@ body {
 
 .md-bookshelf-item {
   min-width: 270px;
+
   -webkit-flex-grow: 1;
   -moz-flex-grow: 1;
   -ms-flex-grow: 1;
   flex-grow: 1;
+
+  -webkit-transition: all 600ms;
+  -moz-transition: all 600ms;
+  -ms-transition: all 600ms;
+  -o-transition: all 600ms;
+  transition: all 600ms;
 }
 
 .md-bookshelf-item-placeholder {
@@ -294,4 +303,8 @@ body {
   left: auto;
   right: auto;
   bottom: auto;
+}
+
+.ly-mobile .md-view {
+  height: auto;
 }
